--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 body {
+  text-decoration-color: #434455;
   font-family: 'Raleway', sans-serif;
   font-family: 'Roboto', sans-serif;
   background: #ffffff;
@@ -59,7 +60,6 @@ button {
 }
 
 .contact-email {
-  
   text-decoration: none;
   font-family: 'Roboto';
   font-style: normal;
@@ -140,7 +140,3 @@ button {
   letter-spacing: 0.02em;
   color: #f4f4fd;
 }
-
-
-
-
