--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,13 @@
+:root {
+  --primary-text-color: #2e2f42;
+  --accent-color: #4d5ae5;
+  --page-background-color: #ffffff;
+  --additional-text-color: #434455;
+  --footer-text-color: #f4f4fd;
+}
+
 body {
+  color: #434455;
   text-decoration-color: #434455;
   font-family: 'Raleway', sans-serif;
   font-family: 'Roboto', sans-serif;
