--- a/css/styles.css
+++ b/css/styles.css
@@ -36,13 +36,26 @@ button {
 
 .logo {
   color: var(--accent-color);
-  text-decoration: none;
-  font-family: 'Raleway';
+  font-family: Raleway, sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
+.logo:hover,
+.logo:focus {
+  color: var(--accent-color);
+}
+.site-navi a {
+    color: var(--primary-text-color);
+  
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+  }
 
 .top-line-web {
   text-decoration: none;
