--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,7 @@ button {
 }
 
 .hero-title {
+    background-color: #434455;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
@@ -158,6 +159,7 @@ button {
 }
 
 .footer-dskr {
+    background: #2E2F42;
   font-family: 'Roboto';
   font-weight: 400;
   font-size: 16px;
