--- a/css/styles.css
+++ b/css/styles.css
@@ -48,14 +48,14 @@ button {
   color: var(--accent-color);
 }
 .site-navi a {
-    color: var(--primary-text-color);
-  
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-  }
+  color: var(--primary-text-color);
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+}
 
 .top-line-web {
   text-decoration: none;
@@ -107,7 +107,7 @@ button {
 }
 
 .hero-title {
-    background-color: #434455;
+  background-color: #434455;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
@@ -159,7 +159,7 @@ button {
 }
 
 .footer-dskr {
-    background: #2E2F42;
+  background: #2e2f42;
   font-family: 'Roboto';
   font-weight: 400;
   font-size: 16px;
