--- a/css/styles.css
+++ b/css/styles.css
@@ -13,13 +13,28 @@ body {
   background: #ffffff;
 }
 
+.header-button:hover,
+.header-button:focus {
+  background-color: #404bbf;
+}
 button :hover,
 button :focus {
   background-color: #404bbf;
   color: #ffffff;
 }
 
+ul {
+  list-style: none;
+}
 button {
+  cursor: pointer;
+  background-color: #f4f4fd;
+  color: var(--accent-color);
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   cursor: pointer;
 }
 
