--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   color: #434455;
-  background-color: var(--background-white);
+  background-color: var(--background-white) #ffffff;
 }
 /* ul - li  */
 .list {
