--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   color: #434455;
-  background-color: var(--background-white) #ffffff;
+  background-color: var(--background-white);
 }
 /* ul - li  */
 .list {
@@ -22,7 +22,7 @@ body {
   --descr-color: #434455;
 }
 .logo {
-  font-family: 'Raleway' sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -39,7 +39,7 @@ body {
 }
 
 .logo-footer-dark {
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
