--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,7 @@ body {
   color: #ffffff;
 }
 .modal-open-button {
+  font-family: 'Roboto', sans-serif;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
