--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ body {
   color: #4d5ae5;
 }
 .logo-header-light {
+  font-family: 'Raleway', sans-serif;
   color: #2e2f42;
 }
 
@@ -142,7 +143,6 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-
   color: #434455;
 }
 .we-doing-title {
@@ -151,14 +151,9 @@ body {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
-  /* identical to box height, or 111% */
-
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-
-  /* NAVY BLUE */
-
   color: #2e2f42;
 }
 .our-team-title {
