--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,7 @@ body {
   letter-spacing: 0.04em;
   color: #ffffff;
   cursor: pointer;
-  background-color: var(--primary-brand);
+  background-color: var(--primary-btn);
 }
 
 .modal-open-button:hover,
