--- a/css/styles.css
+++ b/css/styles.css
@@ -63,13 +63,13 @@ body {
   color: var(--pressed-btn);
 }
 
-.contact-phone:hover,
-.contact-phone:focus {
+.contact:hover,
+.contact:focus {
   color: var(--pressed-btn);
 }
 
-.contact-email:hover,
-.contact-email:focus {
+.contact:hover,
+.contact:focus {
   color: var(--pressed-btn);
 }
 .button {
@@ -77,8 +77,8 @@ body {
   background-color: var(--background-light);
 }
 
-.contact-email,
-.contact-phone {
+.contact,
+.contact {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
