--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--descr-color) #434455;
 }
 .contacts {
   font-style: normal;
