--- a/css/styles.css
+++ b/css/styles.css
@@ -149,6 +149,9 @@ body {
 .our-team {
   background-color: #f4f4fd;
 }
+.our-team-item{
+  background-color: #ffffff;
+}
 .our-team-list {
   background-color: #ffffff;
 }
