--- a/css/styles.css
+++ b/css/styles.css
@@ -52,11 +52,11 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
-}
-.site-menu {
   color: var(--background-dark);
 }
+/* .site-menu {
+  color: var(--background-dark);
+} */
 
 .site-menu-link:hover,
 .site-menu-link:focus {
