--- a/css/styles.css
+++ b/css/styles.css
@@ -53,14 +53,8 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--title-color)
+    color: var(--title-color)#2e2f42;
 }
-
-
-
-
-
-
 
 .site-menu-link:hover,
 .site-menu-link:focus {
