--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--title-color)#2e2f42;
+    color: var(--title-color);
 }
 
 .site-menu-link:hover,
