--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,12 @@ body {
 }
 /* ______++++++++++++++Contacts */
 
-.contacts-link{
+.contacts-link{  
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2E2F42;
   color: var(--title-color);
 }
 .contact,
