--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,11 @@ body {
 }
 
 .site-menu-link {
-  color: var(--background-dark) #2e2f42;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2E2F42;
 }
 .contacts {
   font-style: normal;
