--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,13 @@ body {
 .site-menu-list {
   color: var(--descr-color) #434455;
 }
+.contacts-list{
+  font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+}
 
 .site-menu-link {
   font-weight: 500;
