--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,16 @@ body {
 
 .site-menu-list {
   color: var(--descr-color) #434455;
+}.contact-link {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+.contact-link:hover,
+.contact-link:focus {
+  color: var(--pressed-state);
 }
 
 .site-menu-link {
