--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Roboto', sans-serif;
   color: #434455;
   font-size: 16px;
-  background-color: #ffffff
+  background-color: #ffffff;
 }
 /* ul - li  */
 .list {
@@ -28,32 +28,23 @@ body {
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
-
-  display: flex;
-  align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
 }
 .logo-header-light {
-  font-family: 'Raleway', sans-serif;
   color: #2e2f42;
 }
 
 .logo-footer-dark {
-  font-family: 'Raleway', sans-serif;
-  font-style: normal;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17;
   color: #f4f4fd;
 }
 .site-menu-link {
   font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .site-menu-link:hover,
@@ -74,11 +65,11 @@ body {
 .contact:focus {
   color: var(--pressed-btn);
 }
+
 .button {
   cursor: pointer;
   background-color: var(--background-light);
 }
-/* ______++++++++++++++Contacts */
 
 .contact,
 .contact {
@@ -88,22 +79,16 @@ body {
   letter-spacing: 0.02em;
   color: var(--descr-color) #434455;
 }
-.our-team-item {
-  color: var(--descr-color);
-}
 
-.site-menu-list {
+.site-menu {
   color: var(--descr-color) #434455;
-}.contact-link {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+}
+.contact-link {
   color: #434455;
 }
 .contact-link:hover,
 .contact-link:focus {
-  color: var(--pressed-btn)
+  color: var(--pressed-btn);
 }
 
 .site-menu-link {
@@ -111,7 +96,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2E2F42;
+  color: #2e2f42;
 }
 .contacts {
   font-style: normal;
@@ -123,17 +108,14 @@ body {
 }
 
 .hero-title {
-  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
-  text-align: center;
   letter-spacing: 0.02em;
   color: #ffffff;
 }
 .modal-open-button {
-  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -148,7 +130,6 @@ body {
   background-color: #404bbf;
 }
 .our-goal-title {
-  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -164,60 +145,58 @@ body {
   color: #434455;
 }
 .we-doing-title {
-  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
-  text-align: center;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  color: #2e2f42;
-}
-.our-team {
-  background-color: #f4f4fd;
-}
-.our-team-item {
-  background-color: #ffffff;
-}
-.our-team-list {
-  background-color: #ffffff;
-}
-.our-team-title {
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2e2f42;
 }
 
+.our-team-item {
+  color: var(--descr-color);
+}
+
+.our-team {
+  background-color: #f4f4fd;
+}
+
+.our-team-item {
+  background-color: #ffffff;
+}
+
+.our-team-list {
+  background-color: #ffffff;
+}
+
+.our-team-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+}
+
 .our-team-members {
-  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  text-align: center;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
 
 .our-team-desc {
-  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
-  text-align: center;
   letter-spacing: 0.02em;
   color: #434455;
 }
 .footer-dscr {
-  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -240,29 +219,23 @@ body {
   background-color: #404bbf;
 }
 .filter-but {
-  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  display: flex;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.04em;
   color: #4d5ae5;
 }
 
 .portfolio-title {
-  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
-  line-height: 24px;
+  line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
 .portfolio-dscr {
-  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
